angular-multi-select.css
.multiSelect {
}

.multiSelect.inlineBlock {
    display: inline-block;
}

/* button */
.multiSelect .button {
    display: block;
    position: relative;
    margin:0 auto;
    text-align: center;
    cursor: pointer;
    border: 1px solid #c6c6c6;
    padding: 5px 8px 6px;
    font-size: 14px;
    line-height: 1.4;
    border-radius: 2px;
    color: #333;
   -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -o-user-select: none;
    user-select: none;
    white-space:normal;
    background-color: #fff;
    background-image: linear-gradient(#fff, #e4e4e4);

}

/* button on mouse hover */
.multiSelect .button:hover {
    background-image: linear-gradient(#fff, #eee);
}

/* helper buttons style (select all, none, reset, clear filter); */
.multiSelect .helperButton {
    display: inline-block;
    text-align: center;
    vertical-align: top;
    cursor: pointer;
    border: 1px solid #ccc;
    padding: 2px 7px;
    font-size: 14px;
    line-height: 1;
    border-radius: 2px;
    color: #666;
}

.multiSelect .button > div {
    float: left;
}

/* The checkboxes container */
.multiSelect .checkboxLayer {
    background-color: #fff;
    position: absolute;
    z-index: 999;
    border: 1px solid #cccccc;
    border: 1px solid rgba(0, 0, 0, 0.15);
    border-radius: 4px;
    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
    background-clip: padding-box;
    padding: 14px 0px 7px 14px;
    min-width:270px;
}

/* Downward pointing arrow */
.multiSelect .caret {
    display: inline-block;
    width: 0;
    height: 0;
    margin-left: 15px !important;
    vertical-align: middle;
    border-top: 4px solid #333;
    border-right: 4px solid transparent;
    border-left: 4px solid transparent;
    border-bottom: 0 dotted;
}

.multiSelect.multiSelectItem {
    display: block;
    min-height: 30px;
    color: #777;
}

.multiSelect .vertical {
    float: none;
}

.multiSelect .horizontal {
    float: left;
}

.multiSelect .acol {
    display: table-cell;
    line-height: 1.4;
    min-width: 14px;
}

label.multiSelect span {
    white-space:nowrap;
    margin: 0;
    padding: 0;
    display: inline-block;
   -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -o-user-select: none;
    user-select: none;
}

/* hide the checkbox away */
.multiSelect .checkbox {
    position: absolute;
    left: -9999px;
    cursor: pointer;
}

.multiSelect .show {
    display: inline-block;
}

.multiSelect .hide {
    display: none;
}

.multiSelect .line {
    margin-bottom: 15px;
}

.multiSelect .helperButton + .helperButton  {
    margin-left: 1px;
}

/* On mouse over and focus */
label.multiSelect input:focus ~ span::after,
label.multiSelect span:focus::after,
label.multiSelect span:hover::after {
    /* Enable this if you want some arrow pointer on focus */
    /* content: ' \00AB'; */
}

label.multiSelect input:focus ~ span,
label.multiSelect span:hover {
    color: #333;
    cursor: pointer;
    /* Enable this if you want some arrow pointer on focus */
    /* content: ' \00AB'; */
}

/* for checkboxes currently selected */
.multiSelect .checkboxSelected {
    color: #000;
    text-shadow: 1px 0px #eee;
}

/* checkboxes currently disabled */
.multiSelect.disabled, .multiSelect.disabled:hover {
    color: #ccc;
    cursor: not-allowed;
}

/*
 * If you use images in button / checkbox label, you might want to change the image style here.
 */
.multiSelect img {
    vertical-align: middle;
    margin-bottom:0px;
    height: 22px;
    width:22px;
}

.selectedFilterDiv {
    float: right;
}

.selectFilterLabel {
    font-size: 12px !important;
    vertical-align: bottom;
}

.selectFilterCheckbox {
    display: inline-block !important;
    margin-left: 5px !important;
}

